/*
 * Copyright (C) 2018 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
option optimize_for = LITE_RUNTIME;
package perfetto.protos;
import "perfetto/common/android_logcat_constants.proto";

message AndroidLogcatPacket {
  message LogMessage {
    message BinaryArg {
      optional string name = 1;
      oneof value {
       int64 int_value = 2;
       double real_value = 3;
       string string_value = 4;
      }
    }
    optional AndroidLogcatLogId log_id = 1;
    optional int32 pid = 2;
    optional uint32 tid = 3;
    optional uint64 timestamp = 4;
    optional AndroidLogcatPriority prio = 5;
    optional string tag = 6;
    optional string message = 7;

    // Only for the EVENTS log.
    repeated BinaryArg args = 8;
  }
  repeated LogMessage messages = 1;

  // Stats are emitted only upon Flush() and are monotonic (i.e. they are
  // absolute counters since the beginning of the lifetime of the tracing
  // session and NOT relative to the previous Stats snapshot).
  message Stats {
    // Total number of entries seen, including parse errors and skipped entries.
    optional uint64 num_total = 1;

    // Parser failures.
    optional uint64 num_parse_failures = 2;

    // Messages skipped due to filters.
    optional uint64 num_skipped = 3;
  }
  optional Stats stats = 2;
}
